<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <GVL Name="GVL_bButt_1" Id="{74804b88-68e0-4778-88bf-bd4d0666a426}">
    <Declaration><![CDATA[VAR_GLOBAL
	bButtAuto1		:BOOL;
	bButtManu1		:BOOL;
	bButtStop1 		:BOOL;
	bButtReverse1 	:BOOL;
//-------------------------//
	bButt1s01		:BOOL;
	bButt1s01Rev	:BOOL;
	bButt1s02		:BOOL;
	bButt1s02Rev	:BOOL;
	bButt1s03		:BOOL;
	bButt1s03Rev	:BOOL;
	bButt1s04		:BOOL;
	bButt1s04Rev	:BOOL;								
	bButt1s05		:BOOL;									
	bButt1s05Rev	:BOOL;									
	bButt1s06		:BOOL;									
	bButt1s06Rev	:BOOL;
//-------------------------//
	bButt1s01_s02	:BOOL;
	bButt1s02_s03	:BOOL;
	bButt1s03_s04	:BOOL;
	bButt1s04_s05	:BOOL;
	bButt1s05_s06	:BOOL;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>